# AssetVane

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  compose.prod.yaml  compose.yaml  deploy.env.example
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_fetch_meta.py  0003_signals.py  0004_portfolio_and_assets.py  0005_financials.py  0006_advisor_state.py  0007_screening.py  0008_dossier.py  0009_news_extraction_and_watchlist_interval.py  0010_notifications.py  0011_general_news.py  0012_valuation_metrics.py  0013_news_corpus.py  0014_fetch_meta_attempt_ok.py  0015_funds.py  0016_news_embedding.py  0017_us_equity.py  0018_themes.py  0019_us_holdings_fx.py  0020_news_polarity.py  0021_us_stocks_yoy.py  0022_llm_providers.py  0023_llm_reasoning_embedding.py  0024_jquants_config.py  0025_knowledge_cards.py  0026_knowledge_cards_weight.py  0027_edinet_restatements.py  0028_knowledge_cards_triage_reason.py  0029_financials_guidance.py  0030_edinetdb_config.py  0031_receivables_inventory_quality.py  0032_notable_picks.py  0033_knowledge_cards_stock_scope.py  0034_drop_codex_face_sentinel.py  0035_drop_linked_signal_type.py  0036_proposal_outcomes.py  0037_judgment_fts.py  0038_net_cash.py  0039_investor_profile.py  0040_proposal_conviction.py  (+4 more)
backend/app/: config.py  logging_config.py  main.py
backend/app/adapters/: __init__.py  _http.py  discord.py  edinet.py  edinetdb.py  embedding.py  fund_nav.py  fx.py  general_news_config.py  index.py  jquants.py  news.py  us_equity.py
backend/app/advisor/: __init__.py  card_triage.py  codex_engine.py  core_prompt.md  core_prompt.py  dossier.py  dossier_progress.py  edinet_summary.py  engine.py  journaling.py  llm.py  mcp_server.py  method_cards.py  news_polarity.py  nightly.py  policy_compiler.py  profiler.py  prompt_builder.py  reviewer.py  router.py  service.py  skeptic.py  theme_tagger.py
backend/app/batch/: __init__.py  calendar.py  lock.py  notify.py  runner.py  state.py
backend/app/db/: __init__.py  engine.py  fts.py  repo.py  schema.py
backend/app/ml/: __init__.py  model_store.py
backend/app/quant/: __init__.py  _frame.py  backtest.py  behavior.py  indicators.py  lead_lag.py  momentum.py  notable.py  optimize.py  outcome.py  portfolio.py  stealth_accumulation.py  valuation.py  volume_spike.py
backend/app/reference/: __init__.py  gics_sectors.py  sector_codes.py  theme_seeds.py
backend/app/routers/: __init__.py  advisor_state.py  assets.py  batch.py  cards.py  diagnostics.py  dossier.py  edinet_config.py  edinetdb_config.py  funds.py  general_news.py  jquants_config.py  lead_lag.py  llm_config.py  news.py  portfolio.py  profile.py  screening_filters.py  signals.py  stocks.py  us_holdings.py  us_stocks.py  watchlist.py
backend/tests/: conftest.py  test_advisor_service.py  test_advisor_state_api.py  test_advisor_tools.py  test_api.py  test_backfill_edinet.py  test_backfill_net_cash_router.py  test_backfill_themes.py  test_backup.py  test_batch_calendar.py  test_batch_fetch_quotes.py  test_batch_lock.py  test_batch_state.py  test_batch_stop.py  test_calc_receivables_inventory.py  test_calc_us_receivables_inventory.py  test_calc_us_valuation.py  test_calc_valuation.py  test_card_chat_ops.py  test_card_retrieval.py  test_card_triage.py  test_cards_api.py  test_chat_api.py  test_chat_journal.py  test_codex_engine.py  test_company_description_guard.py  test_cursor.py  test_discord_adapter.py  test_dossier_api.py  test_dossier_pipeline.py  test_dossier_progress.py  test_dossier_repo.py  test_edinet_adapter.py  test_edinet_config.py  test_edinet_summary.py  test_edinetdb.py  test_edinetdb_config.py  test_edinetdb_quality.py  test_embed_themes_job.py  test_embedding_adapter.py  (+114 more)
docs/: api.md  (+12 more)
(+245 files in other folders)
