[project]
name = "assetvane-backend"
version = "0.1.0"
description = "AssetVane backend — FastAPI / 数理計算 / AI Advisor / DB の単一所有者"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "openai>=2.40.0",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "alembic>=1.13",
    "numpy>=2.0",       # quant 自前指標（Phase 1・spec §7）
    "pandas>=2.2",      # 時系列（Phase 1・spec §7）
    "apscheduler>=3.10",  # cron 方式 C・APScheduler 同居（Phase 1・spec §3.7）
    "scipy>=1.13",      # 相関・統計・SLSQP（Phase 2・spec §7）
    "pyportfolioopt>=1.5",  # 平均分散最適化（内部 cvxpy・Phase 2・spec §7・ARM ゲート）
    "lightgbm>=4.5",    # AI Alpha Scorer の学習(別PC)・推論(ラズパイ)（Phase 5・phase5-spec.md §8・ARM ゲート）
    "joblib>=1.3",      # .pkl の保存/読込（Phase 5・model_store／train.py・phase5-spec.md §4.1）
    "mcp>=1.27.2",
    "trafilatura>=2.0.0",
    "yfinance>=1.4.1",
]

# アプリケーション（ライブラリではない）なので非パッケージモードで扱う。
[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F(pyflakes/pycodestyle), I(isort), UP(pyupgrade), B(bugbear) を基本に。
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI は Depends()/Query() を既定引数に置くのが定石。B008（既定引数での関数呼び出し）の対象外にする。
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# backend/ を import パスに通す（app パッケージを見つけるため。src レイアウトではない）。
pythonpath = ["."]
